# wireguard-telegram-bot

./: Cargo.toml  README.md
src/: get.rs  lib.rs
src/command/: linux.rs
src/parser/: dump.rs
src/renderer/: telegram.rs
