[package]
name = "wireguard-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"
regex = "1.5.4"
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
tokio = { version = "1.15.0", features = ["full"] }
